kubernetes/apps/media/jellyseer/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:2.2.3@sha256:a324fa4d81cce73116801bee3c50b632f3457c0ca0ad31aa692c640e22f50dea
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: appdata
              mountPath: /app/config
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
